--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Nunito' >
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins' >
     <title>2048</title>
 </head>
 <body>
